--- a/CSS the skin/Flexbox/index.html
+++ b/CSS the skin/Flexbox/index.html
@@ -4,7 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Responsive CSS & FlexBox</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Let's Play With Flexbox</h1>
+
+    <section id="container">
+      <div style="background-color: #80ffdb"></div>
+      <div style="background-color: #64dfdf"></div>
+      <div style="background-color: #48bfe3"></div>
+      <div style="background-color: #5390d9"></div>
+      <div style="background-color: #6930c3"></div>
+    </section>
+
+    <h2>Another Example</h2>
+    <main>
+      <section class="sidebar"></section>
+      <section class="maincontent"></section>
+      <section class="sidebar"></section>
+    </main>
+  </body>
 </html>
