--- a/Meseum Of Candy/index.html
+++ b/Meseum Of Candy/index.html
@@ -23,6 +23,56 @@
     <title>Meseum Of Candy</title>
   </head>
   <body>
+    <!-- Navbar -->
+    <nav
+      id="mainNavbar"
+      class="navbar navbar-dark navbar-expand-md py-0 fixed-top"
+    >
+      <a href="#" class="navbar-brand">CANDY</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="nav-link"
+              >HOME</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="nav-link"
+              >ABOUT</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="nav-link"
+              >TICKETS</a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
