--- a/Meseum Of Candy/index.html
+++ b/Meseum Of Candy/index.html
@@ -73,11 +73,142 @@
       </div>
     </nav>
 
+    <!-- Main section -->
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div
+            id="headingGroup"
+            class="text-white text-center d-none d-lg-block"
+          >
+            <h1 class="display-2">MESEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="display-2">MESEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="display-2">MESEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="display-2">MESEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="display-2">MESEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="display-2">MESEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="display-2">MESEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img src="imgs/hand2.png" alt="dognut" srcset="" class="img-fluid" />
+        </div>
+      </div>
+    </section>
+
+    <!-- main section -->
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="imgs/milk.png" alt="milk" srcset="" class="img-fluid" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-end">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>MESEUM OF CANDY</h2>
+              <img
+                src="imgs/lolli_icon.png"
+                alt="lolli"
+                srcset=""
+                class="d-none d-lg-inline"
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+                tempora doloremque aliquid vero vel sit beatae molestiae labore,
+                possimus fugiat, nobis modi maxime voluptatem obcaecati hic
+                suscipit? In debitis nobis vero assumenda voluptates aliquid
+                incidunt earum repellat, quisquam nulla nemo neque odit impedit
+                possimus enim accusamus deleniti ducimus consequuntur fugiat!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row align-items-center content">
+        <div class="col-md-6 text-center">
+          <div class="row justify-content-end">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>MESEUM OF CANDY</h2>
+              <img
+                src="imgs/lolli_icon.png"
+                alt="lolli"
+                srcset=""
+                class="d-none d-lg-inline"
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+                tempora doloremque aliquid vero vel sit beatae molestiae labore,
+                possimus fugiat, nobis modi maxime voluptatem obcaecati hic
+                suscipit? In debitis nobis vero assumenda voluptates aliquid
+                incidunt earum repellat, quisquam nulla nemo neque odit impedit
+                possimus enim accusamus deleniti ducimus consequuntur fugiat!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img src="imgs/gumball.png" alt="milk" srcset="" class="img-fluid" />
+        </div>
+      </div>
+
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img
+            src="imgs/sprinkles.png"
+            alt="milk"
+            srcset=""
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-end">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>MESEUM OF CANDY</h2>
+              <img
+                src="imgs/lolli_icon.png"
+                alt="lolli"
+                srcset=""
+                class="d-none d-lg-inline"
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+                tempora doloremque aliquid vero vel sit beatae molestiae labore,
+                possimus fugiat, nobis modi maxime voluptatem obcaecati hic
+                suscipit? In debitis nobis vero assumenda voluptates aliquid
+                incidunt earum repellat, quisquam nulla nemo neque odit impedit
+                possimus enim accusamus deleniti ducimus consequuntur fugiat!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Custom script for nav scroll effect -->
+    <script>
+      window.onscroll = function () {
+        scrollFunction;
+      };
+      function scrollFunction() {
+        if (
+          document.body.scrollTop > 20 ||
+          document.documentElement.scrollTop > 50
+        ) {
+          document.getElementById("mainNavbar").classList.add = "scrolled";
+        } else {
+          document.getElementById("mainNavbar").classList.add = "";
+        }
+      }
+    </script>
   </body>
 </html>
